tests/error/comptime/invalid_result_value5.bz
// error: invalid value of type '[*i32]' returned from compile time execution
// note: invalid value of type '*i32' for element 0 in tuple of type '[*i32]'
// note: a pointer of type '*i32' is not a constant expression
// error: expression must be a constant expression
consteval p = {
	let i = 0;
	[ &i ]
};
